增加代码黑名单字典树、增加Java安全管理