@@ -1,34 +1,53 @@
 package com.zjh.ojcodesandbox.template;
 
 import cn.hutool.core.io.FileUtil;
+import cn.hutool.core.io.resource.ClassPathResource;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.zjh.ojcodesandbox.CodeSandbox;
 import com.zjh.ojcodesandbox.model.ExecuteCodeRequest;
 import com.zjh.ojcodesandbox.model.ExecuteCodeResponse;
 import com.zjh.ojcodesandbox.model.ExecuteMessage;
 import com.zjh.ojcodesandbox.model.JudgeInfo;
 import com.zjh.ojcodesandbox.model.enums.ExecuteCodeStatusEum;
+import com.zjh.ojcodesandbox.util.ErrorUtils;
 import com.zjh.ojcodesandbox.util.ProcessUtils;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
 public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
-    public static final String CODE_DIR_NAME = "tempCode";
-    public static final String JAVA_CLASS_NAME = "Main.java";
+    protected static final String CODE_DIR_NAME = "tempCode";
+    protected static final String JAVA_CLASS_NAME = "Main.java";
+
+    protected static String SECURITY_MANAGER_PARENT_PATH;
+
+    protected static final WordTree WORD_TREE;
+
+    static {
+        List<String> blackList = Arrays.asList("File", "exec", "sleep");
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+    }
 
     /**
      * 1.将代码存储到本地
+     *
      * @param code
      * @return
      */
     public File saveCodeToFile(String code) {
+        FoundWord foundWord = WORD_TREE.matchWord(code);
+        if (foundWord != null) {
+            throw new RuntimeException("包含禁止词：" + foundWord.getFoundWord());
+        }
         String codePathName = System.getProperty("user.dir") + File.separator + CODE_DIR_NAME;
-
         if (!FileUtil.exist(codePathName)) {
             FileUtil.mkdir(codePathName);
         }
@@ -41,6 +60,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     /**
      * 2.对code进行编译
+     *
      * @param userCodeFile
      * @return
      */
@@ -51,6 +71,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     /**
      * 3.对编译出来的字节码文件进行执行
+     *
      * @param inputList
      * @param userCodeParentPath
      * @return
@@ -58,7 +79,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
     public List<ExecuteMessage> execCodeToMessageList(List<String> inputList, String userCodeParentPath) {
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String input : inputList) {
-            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath + File.separator, input);
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s:%s -Djava.security.manager=MySecurityManager Main %s", userCodeParentPath + File.separator, SECURITY_MANAGER_PARENT_PATH, input);
             ExecuteMessage runExecuteMessage = ProcessUtils.runProcessInputArgs(runCmd, 1);
             executeMessageList.add(runExecuteMessage);
         }
@@ -68,6 +89,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     /**
      * 4.处理输出结果
+     *
      * @param executeMessageList
      * @return
      */
@@ -105,6 +127,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     /**
      * 5.文件清理
+     *
      * @param userCodeFile
      */
     public void delTemp(File userCodeFile) {
@@ -115,9 +138,17 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+        ClassPathResource classPathResource = new ClassPathResource("/security");
+        SECURITY_MANAGER_PARENT_PATH = classPathResource.getFile().getAbsolutePath();
+
         List<String> inputList = executeCodeRequest.getInputList();
         //1.将代码存储到本地
-        File userCodeFile = saveCodeToFile(executeCodeRequest.getCode());
+        File userCodeFile = null;
+        try {
+            userCodeFile = saveCodeToFile(executeCodeRequest.getCode());
+        } catch (Exception e) {
+            return ErrorUtils.getResponse(ExecuteCodeStatusEum.COMPILE_FAIL, e.getMessage());
+        }
 
         //2.对code进行编译
         ExecuteMessage compileExecuteMessage = compileCode(userCodeFile);
